課題修正し、更新を実施

--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -6,6 +6,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <main>
         <h1>SAMURAIニュース</h1>
         <a href="kadai_008.html">ホーム</a>
         <a href="https://www.sejuku.net">社会</a>
@@ -13,7 +14,6 @@
         <a href="https://www.sejuku.net">スポーツ</a>
         <a href="https://www.sejuku.net">テクノロジー</a>
         <br>
-    <main>
         <article>
             <section>
         <h2>社会</h2>
@@ -59,7 +59,9 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
             <br>
+            <footer>
             <p>&copy; SAMURAIニュース</p>
+            </footer>
         </section>
         </article>
     </main>
