--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -6,21 +6,25 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <main>
-        <h1>SAMURAIニュース</h1>
-        <a href="kadai_008.html">ホーム</a>
-        <a href="https://www.sejuku.net">社会</a>
-        <a href="https://www.sejuku.net">経済</a>
-        <a href="https://www.sejuku.net">スポーツ</a>
-        <a href="https://www.sejuku.net">テクノロジー</a>
+        <header>
+            <h1>SAMURAIニュース</h1>
+            <nav>
+            <a href="kadai_008.html">ホーム</a>
+            <a href="https://www.sejuku.net">社会</a>
+            <a href="https://www.sejuku.net">経済</a>
+            <a href="https://www.sejuku.net">スポーツ</a>
+            <a href="https://www.sejuku.net">テクノロジー</a>
+            </nav>
+        </header>
         <br>
+    <main>
         <article>
             <section>
         <h2>社会</h2>
-        <h3>和菓子店も「トリックオアトリート！」</h3>
-        <p>日本でも年々人気の高まるハロウィン。<br>今年は大手和菓子店5社がハロウィン向けの和菓子セットを共同開発しました。</p>
-        <audio src="ichi.mp3" controls></audio>
-        <h3>私のおすすめ和菓子アンケートフォーム</h3>
+            <h3>和菓子店も「トリックオアトリート！」</h3>
+            <p>日本でも年々人気の高まるハロウィン。<br>今年は大手和菓子店5社がハロウィン向けの和菓子セットを共同開発しました。</p>
+            <audio src="ichi.mp3" controls></audio>
+            <h3>私のおすすめ和菓子アンケートフォーム</h3>
         <form>
             <label>氏名</label>
             <input type="text" placeholder="名前を入力してください">
@@ -59,11 +63,12 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
             <br>
-            <footer>
-            <p>&copy; SAMURAIニュース</p>
-            </footer>
         </section>
-        </article>
+    </article>
     </main>
+        <footer>
+            <p>&copy; SAMURAIニュース</p>
+        </footer>
+
     </body>
 </html>
