--- a/kadai_014/kadai_014.html
+++ b/kadai_014/kadai_014.html
@@ -4,9 +4,31 @@
         <title>14章課題</title>
         <meta name="description" content="このページは14章の課題です">
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>MY PROFILE</h1>
-        <h2>名前</h2>
+        <header>
+        <h1>
+            <span class="skyblue">M</span>Y<span class="pink">P</span>ROFILE
+        </h1>
+        </header>
+    <div id="basic">
+        <h2 class="pink">名前</h2><!--ピンク-->
+        <p>侍太郎</p>
+        <h2 class="skyblue">生年月日</h2><!--スカイブルー-->
+        <p>1999年11月22日</p>
+        <h2 class="pink">血液型</h2><!--ピンク-->
+        <p>O型</p>
+    </div>
+        <h2 class="skyblue">趣味</h2><!--スカイブルー-->
+        <p>旅行、読書、ゲーム</p>
+        <h2 class="pink">好きな食べ物</h2><!--ピンク-->
+        <p>ハンバーグ、きつねうどん、抹茶アイス</p>
+        <h2 class="skyblue">プログラミングを始めた理由</h2><!--スカイブルー-->
+        <p>プログラマーとして転職したいから。
+        <br>転職して数年後にはフリーランスになって、旅行しながら仕事したい！</p>
     </body>
 </html>
